--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
     -->
     <title>React App</title>
     <style>
-      
+        th, td {
+          border: 1px solid #444444;
+          
+        }
     </style>
   </head>
   <body>
